osc cw: Makefile for all tasks

--- a/osc/cw/Makefile
+++ b/osc/cw/Makefile
@@ -1,9 +1,15 @@
-CC=gcc
-CFLAGS=-std=c11
-CPPFLAGS=-Wall -g -O2 -static
+CC = gcc
+CFLAGS = -std=c11
+CPPFLAGS = -Wall -g -O2 -static
+LDFLAGS = -lpthread
+PROGS = task1a task1b task2 task3 task4 task5
+
+all: $(PROGS)
+
+task1a task2b: LDFLAGS=
 
 %: %.c
-		$(CC) $(CFLAGS) $(CPPFLAGS) -o $@ coursework.c $<
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -o $@ coursework.c $<
 
 clean:
-	@rm -f *.out task1a task1b task2 task3 task4 task5
+	@rm -f *.out $(PROGS)
