osc cw: Makefile without debug

--- a/osc/cw/Makefile
+++ b/osc/cw/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -std=c11
-CPPFLAGS = -Wall -g -O2 -static
+CPPFLAGS = -Wall -O2
 LDFLAGS = -pthread
 PROGS = task1a task1b task2 task3 task4 task5
 
